# openmetadata-dq-autofix

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.zed/: settings.json
src/dq_autofix/: __init__.py  config.py  main.py
src/dq_autofix/analyzer/: __init__.py  failure_analyzer.py  pattern_detector.py  sample_fetcher.py
src/dq_autofix/api/: __init__.py  routes.py  schemas.py
src/dq_autofix/confidence/: __init__.py  scorer.py
src/dq_autofix/openmetadata/: __init__.py  client.py  models.py
src/dq_autofix/preview/: __init__.py  diff_generator.py  rollback.py  sql_generator.py
src/dq_autofix/strategies/: __init__.py  base.py  deduplication.py  normalization.py  null_imputation.py  registry.py
static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_api.py  test_client.py  test_integration.py
tests/test_analyzer/: test_failure_analyzer.py  test_pattern_detector.py  test_sample_fetcher.py
tests/test_confidence/: __init__.py  test_scorer.py
tests/test_preview/: __init__.py  conftest.py  test_diff_generator.py  test_rollback.py  test_sql_generator.py
tests/test_strategies/: __init__.py  conftest.py  test_base.py  test_deduplication.py  test_normalization.py  test_null_imputation.py  test_registry.py
